Move some files around.

--- a/hello_world_c/Makefile
+++ b/hello_world_c/Makefile
@@ -8,7 +8,7 @@ rebuild: clean all
 app.bin: app
 	arm-none-eabi-objcopy -O binary ./app ./app.bin
 
-app: main.c monotron-app.ld
-	arm-none-eabi-gcc -mcpu=cortex-m4 -nostartfiles main.c -nostdlib -pie -T ./monotron-app.ld -mthumb -o app
+app: main.c ../monotron-app.ld ../monotron.h
+	arm-none-eabi-gcc -mcpu=cortex-m4 -nostartfiles main.c -nostdlib -I .. -T ../monotron-app.ld -mthumb -o app
 
 .PHONY = clean rebuild all
