Make callbacks global statics, to give a more C-like API.

--- a/hello_world_c/Makefile
+++ b/hello_world_c/Makefile
@@ -1,3 +1,5 @@
+CFLAGS = -fno-builtin  -mcpu=cortex-m4 -nostartfiles -nostdlib -mthumb
+
 all: app.bin
 
 clean:
@@ -8,7 +10,13 @@ rebuild: clean all
 app.bin: app
 	arm-none-eabi-objcopy -O binary ./app ./app.bin
 
-app: main.c ../monotron-app.ld ../monotron.h
-	arm-none-eabi-gcc -mcpu=cortex-m4 -nostartfiles main.c -nostdlib -I .. -T ../monotron-app.ld -mthumb -o app
+app: main.o lib.o ../monotron-app.ld ../monotron.h
+	arm-none-eabi-gcc ${CFLAGS} -T ../monotron-app.ld -o app main.o lib.o
+
+main.o: main.c
+	arm-none-eabi-gcc ${CFLAGS} -I .. -o main.o -c main.c
+
+lib.o: ../lib.c
+	arm-none-eabi-gcc ${CFLAGS} -I .. -o lib.o -c ../lib.c
 
 .PHONY = clean rebuild all
