--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 edition = "2018"
 
+[profile.release]
+lto = true
+debug = true
+codegen-units = 1
+opt-level = "s"
+
 [dependencies]
