--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 lto = true
 debug = true
 codegen-units = 1
-opt-level = "s"
+opt-level = "z"
+
+[features]
+print-panic = []
 
 [dependencies]
