--- a/6502_basic/Makefile
+++ b/6502_basic/Makefile
@@ -1,11 +1,3 @@
-SOURCES = main.c cpu.c ../lib.c
-OBJECTS = $(OUT_DIR)/main.o $(OUT_DIR)/cpu.o $(OUT_DIR)/lib.o
+SOURCES = main.c cpu.c
 
 include ../Common.mk
-
-$(OUT_DIR)/main.o: main.c
-
-$(OUT_DIR)/lib.o: ../lib.c
-
-$(OUT_DIR)/cpu.o: cpu.c
-
