--- a/tiny_basic/Makefile
+++ b/tiny_basic/Makefile
@@ -1,9 +1,2 @@
-SOURCES = main.c ../lib.c
-OBJECTS = $(OUT_DIR)/main.o $(OUT_DIR)/lib.o
-
+SOURCES = main.c
 include ../Common.mk
-
-$(OUT_DIR)/main.o: main.c
-
-$(OUT_DIR)/lib.o: ../lib.c
-
