--- a/monotron-slideshow/Cargo.toml
+++ b/monotron-slideshow/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 edition = "2018"
 
+[profile.release]
+opt-level = "s"
+lto = true
+
 [dependencies]
 monotron-app = { path = "../monotron-app" }
