Convert CP850 to UTF-8, and fix ncurses to it accepts UTF-8. ) You have to do a setlocale, which needs the libc crate ) You have to use the wide version of ncurses

--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -7,4 +7,5 @@ authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 print-panic = []
 
 [target.'cfg(not(target_os = "none"))'.dependencies]
-ncurses = "5.99.0"
+ncurses = { version = "5.99.0", features = ["wide"] }
+libc = { version = "0.2", default-features = false }
