Fix the monotron-slideshow build process. Now rebuilds only what it has to.

--- a/monotron-slideshow/Makefile
+++ b/monotron-slideshow/Makefile
@@ -5,32 +5,43 @@ COMPRESSED_MARKDOWN_FILES = $(foreach _example, $(EXAMPLES), $(OUT_DIR)/$(_examp
 BIN_FILES = $(foreach _example, $(EXAMPLES), $(OUT_DIR)/$(_example).bin)
 ARM_FILES = $(foreach _example, $(EXAMPLES), $(OUT_DIR)/$(_example).elf)
 LINUX_FILES = $(foreach _example, $(EXAMPLES), $(OUT_DIR)/$(_example)-linux)
-
-.SECONDARY:
+V ?= @
 
 all: directories $(BIN_FILES) $(ARM_FILES) $(LINUX_FILES)
 
+.SECONDARY:
+
+.PHONY: all rebuild clean directories $(LINUX_FILES) $(ARM_FILES)
+
+clean:
+	rm -rf $(OUT_DIR)
+	cargo clean
+
+$(LINUX_FILES): $(COMPRESSED_MARKDOWN_FILES)
+$(ARM_FILES): $(COMPRESSED_MARKDOWN_FILES)
+
+rebuild: clean all
+
 directories: $(OUT_DIR)
 
-$(OUT_DIR)/%.md: examples/%.md
-	python3 ./compress.py $^ $@
-
 $(OUT_DIR):
-	@mkdir -p $@
+	$(V)mkdir -p $@
 
-$(OUT_DIR)/%.elf: ./target/thumbv7em-none-eabihf/release/examples/%
-	@cp $^ $@
+$(OUT_DIR)/%.md: examples/%.md
+	@echo Compressing $^
+	$(V)python3 ./compress.py $^ $@
+
+$(ARM_FILES): $(OUT_DIR)/%.elf: FORCE
+	@echo Building $* for Monotron...
+	$(V)cargo build --release --example $* --target=thumbv7em-none-eabihf
+	$(V)cp ./target/thumbv7em-none-eabihf/release/examples/$* $@
 
 $(OUT_DIR)/%.bin: $(OUT_DIR)/%.elf
-	arm-none-eabi-objcopy -O binary $^ $@
+	$(V)arm-none-eabi-objcopy -O binary $^ $@
 
-./target/thumbv7em-none-eabihf/release/examples/%: FORCE $(OUT_DIR)/%.md
-	cargo build --release --example $* --target=thumbv7em-none-eabihf
-
-./target/release/examples/%: FORCE $(OUT_DIR)/%.md
-	cargo build --release --example $*
-
-$(OUT_DIR)/%-linux: ./target/release/examples/%
-	@cp $^ $@
+$(LINUX_FILES): $(OUT_DIR)/%-linux: FORCE
+	@echo Building $* for Linux...
+	$(V)cargo build --release --example $*
+	$(V)cp ./target/release/examples/$* $@
 
 FORCE:
