--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: rust
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y libsdl2-dev
+  - sudo apt-get install -y libsdl2-dev libegl1-mesa-dev libgles2-mesa-dev
 rust:
   - stable
 install:
