Replace lib.c and lib_posix.c with Rust crate monotron-apps. Fix all apps to run with SDL2 window (requires pumping the event queue periodically). Fix deadlock calling readc on an empty queue. Process Return key correctly. Delete old C slideshow.

--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -3,6 +3,9 @@ name = "monotron-app"
 version = "0.1.0"
 authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 
+[lib]
+crate-type = ["staticlib", "rlib"]
+
 [features]
 print-panic = []
 
