--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rust:
 install:
   - pushd /
   - rustup target add thumbv7em-none-eabihf
+  - rustup target add thumbv7em-none-eabi
   - popd
   - curl https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/6-2017q2/gcc-arm-none-eabi-6-2017-q2-update-linux.tar.bz2 | tar -C /home/travis -x -j
 before_script:
