Moved some things around.

--- a/examples/monotron-slideshow/Cargo.toml
+++ b/examples/monotron-slideshow/Cargo.toml
@@ -10,4 +10,4 @@ opt-level = "z"
 lto = true
 
 [dependencies]
-monotron-app = { path = "../monotron-app" }
+monotron-app = { path = "../../monotron-app" }
