--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "monotron-app"
-version = "0.1.0"
+version = "0.5.0"
 authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
+readme = "README.md"
+licence = "LICENCE.md"
+description = "Support crate for writing Monotron applications."
+keywords = "sdl2 monotron embedded arm"
 
 [lib]
 crate-type = ["staticlib", "rlib"]
