Keywords are a list.

--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 readme = "README.md"
 licence = "LICENCE.md"
 description = "Support crate for writing Monotron applications."
-keywords = "sdl2 monotron embedded arm"
+keywords = ["sdl2", "monotron", "embedded", "arm"]
 
 [lib]
 crate-type = ["staticlib", "rlib"]
