Change license to license-file.

--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -3,7 +3,7 @@ name = "monotron-app"
 version = "0.5.0"
 authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 readme = "README.md"
-license = "LICENCE.md"
+license-file = "LICENCE.md"
 description = "Support crate for writing Monotron applications."
 keywords = ["sdl2", "monotron", "embedded", "arm"]
 repository = "https://github.com/thejpster/monotron-apps"
