--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -7,6 +7,7 @@ license-file = "LICENCE.md"
 description = "Support crate for writing Monotron applications."
 keywords = ["sdl2", "monotron", "embedded", "arm"]
 repository = "https://github.com/thejpster/monotron-apps"
+edition = "2018"
 
 [lib]
 crate-type = ["staticlib", "rlib"]
@@ -14,7 +15,11 @@ crate-type = ["staticlib", "rlib"]
 [features]
 print-panic = []
 
+[dependencies]
+monotron-api = "0.1.0"
+
 [target.'cfg(not(target_os = "none"))'.dependencies]
 sdl2 = "0.32"
 vga-framebuffer = "0.8.1"
 lazy_static = "1.3"
+chrono = "0.4"
