--- a/monotron-app/Cargo.toml
+++ b/monotron-app/Cargo.toml
@@ -16,13 +16,13 @@ crate-type = ["staticlib", "rlib"]
 print-panic = []
 
 [dependencies.monotron-api]
-version = "0.2.1"
+version = "0.2.2"
 # path = "../../monotron/monotron-api"
 
 [target.'cfg(not(target_os = "none"))'.dependencies]
 sdl2 = "0.32"
 # vga-framebuffer = "0.8.1"
-# vga-framebuffer = { path = "../../vga-framebuffer-rs" }
-vga-framebuffer = { git = "https://github.com/thejpster/vga-framebuffer-rs" }
+vga-framebuffer = { path = "../../vga-framebuffer-rs" }
+# vga-framebuffer = { git = "https://github.com/thejpster/vga-framebuffer-rs" }
 lazy_static = "1.3"
 chrono = "0.4"
